--- a/app/src/main/res/layout/activity_joystick.xml
+++ b/app/src/main/res/layout/activity_joystick.xml
@@ -15,7 +15,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true" />
 
-    <fr.millenium_blitz.projectpicars.view.JoystickPowerView
+    <fr.millenium_blitz.projectpicars.view.JoystickView
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:id="@+id/joystickPuissance"
@@ -23,16 +23,18 @@
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:background="@drawable/joystick_power"/>
 
-    <fr.millenium_blitz.projectpicars.view.JoystickDirectionView
+    <fr.millenium_blitz.projectpicars.view.JoystickView
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:id="@+id/joystickDirection"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:background="@drawable/joystick_direction"/>
 
     <com.beardedhen.androidbootstrap.BootstrapButton
         android:layout_width="wrap_content"
