--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="bleue">#2196f3</color>
     <color name="gris_transparent">#B3404040</color>
+
+    <color name="black_overlay">#66000000</color>
 </resources>
