--- a/app/src/main/res/layout/activity_joystick.xml
+++ b/app/src/main/res/layout/activity_joystick.xml
@@ -60,7 +60,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:text="TextView"
+        android:text="@string/voltage_batterie"
         android:textColor="@android:color/holo_red_dark"
         android:textSize="18sp"
         android:textStyle="bold"
