--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
             android:layout_marginBottom="10dp">
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/input_layout_add_connection"
+                android:id="@+id/input_layout_ip_address"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
@@ -51,8 +51,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/btnConnect"
-                android:text="Connection"
-                android:layout_alignBottom="@+id/input_layout_add_connection"
+                android:text="@string/connect"
+                android:layout_alignBottom="@+id/input_layout_ip_address"
                 android:layout_alignParentEnd="true"
                 style="@style/Widget.AppCompat.Button.Colored"
                 android:textColor="@android:color/white" />
@@ -73,7 +73,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/btnTest"
-                android:text="test mode" />
+                android:text="@string/test_mode" />
 
         </LinearLayout>
 
